fixing alignment for config fields

--- a/src/components/configurators/domain-configurator/domain-configurator.module.scss
+++ b/src/components/configurators/domain-configurator/domain-configurator.module.scss
@@ -23,4 +23,8 @@
   width: 60%;
   padding: 2%;
   height: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
